--- a/src/main/webapp/WEB-INF/views/first/hello.html
+++ b/src/main/webapp/WEB-INF/views/first/hello.html
@@ -9,5 +9,6 @@
 
 <a href="/first/goodbye">goodbye page</a>
 <a href="/exit">exit page</a>
+<a href="/first/hello?name=asd&surname=asd">Request with param</a> <!--Переходим по ссылке и одновременно передаем параметры name, surname-->
 </body>
 </html>
