--- a/src/main/webapp/WEB-INF/views/first/hello.html
+++ b/src/main/webapp/WEB-INF/views/first/hello.html
@@ -10,5 +10,7 @@
 <a href="/first/goodbye">goodbye page</a>
 <a href="/exit">exit page</a>
 <a href="/first/hello?name=asd&surname=asd">Request with param</a> <!--Переходим по ссылке и одновременно передаем параметры name, surname-->
+
+<p th:text="${message}"></p>
 </body>
 </html>
