--- a/src/main/webapp/WEB-INF/views/people/show.html
+++ b/src/main/webapp/WEB-INF/views/people/show.html
@@ -5,7 +5,7 @@
     <title>Show</title>
 </head>
 <body>
-<p th:text="${persone.getName()}">VALUE</p>
-<p th:text="${persone.getId()}">VALUE</p>
+<p th:text="${person.getName()}">VALUE</p>
+<p th:text="${person.getId()}">VALUE</p>
 </body>
 </html>
