ls24 complete CRUD app

--- a/src/main/webapp/WEB-INF/views/people/index.html
+++ b/src/main/webapp/WEB-INF/views/people/index.html
@@ -10,5 +10,10 @@
   <a th:href="@{/people/{id}(id=${persone.getId()})}" th:text="${persone.getName()}">user</a>
 </div>
 
+<br/>
+<hr/>
+
+<a href="/people/new"> Create new person</a>
+
 </body>
 </html>
