ls25 Validation form

--- a/src/main/webapp/WEB-INF/views/people/index.html
+++ b/src/main/webapp/WEB-INF/views/people/index.html
@@ -7,7 +7,7 @@
 <body>
 
 <div th:each="persone : ${people}">
-  <a th:href="@{/people/{id}(id=${persone.getId()})}" th:text="${persone.getName()}">user</a>
+  <a th:href="@{/people/{id}(id=${persone.getId()})}" th:text="${persone.getName() + ', ' + persone.getAge()}">user</a>
 </div>
 
 <br/>
