--- a/src/main/webapp/WEB-INF/views/people/new.html
+++ b/src/main/webapp/WEB-INF/views/people/new.html
@@ -7,9 +7,20 @@
 <body>
 
 <form th:method="POST" th:action="@{/people}" th:obejct="${person}">
-  <label for="name">Enter Name:</label>
-  <input type="text" th:field="*{person.name}" id="name"/>
-  <br/>
+    <label for="name">Enter Name:</label>
+    <input type="text" th:field="*{person.name}" id="name"/>
+    <p style="color: red" th:if="${#fields.hasErrors('person.name')}" th:errors="*{person.name}"> Name Error </p>
+    <br/>
+
+    <label for="age">Enter age</label>
+    <input type="text" th:field="*{person.age}" id="age"/>
+    <p style="color: red" th:if="${#fields.hasErrors('person.age')}" th:errors="*{person.age}"> Age Error </p>
+    <br/>
+
+    <label for="email">Enter email</label>
+    <input type="text" th:field="*{person.email}" id="email">
+    <p style="color: red" th:if="${#fields.hasErrors('person.email')}" th:errors="*{person.email}"> Email Error </p>
+    <br/>
   <input type="submit" value="Create!">
 
 
